--- a/App.config
+++ b/App.config
@@ -2,9 +2,9 @@
 <configuration>
 	
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -69,10 +69,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
+	
+	<entityFramework>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      <provider invariantName="System.Data.SqlServerCe.4.0" type="System.Data.Entity.SqlServerCompact.SqlCeProviderServices, EntityFramework.SqlServerCompact" />
+		<provider invariantName="System.Data.SqlClient"
+					type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlCeConnectionFactory, EntityFramework">
       <parameters>
@@ -82,6 +83,8 @@
   </entityFramework>
   
 	<connectionStrings>
-		<add name="ArendConnection" connectionString="Data Source=users.db" providerName="System.Data.SQLite.EF6" />
+		<add name="ArendConnection"
+         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ArendDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
+         providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
